--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -39,4 +39,5 @@ Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sour
 \include{colorname}
 \include{palettename}
 \include{pathstyles}
+\include{arrows}
 \end{document}
