forgot to update CHANGES
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1241 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -82,8 +82,8 @@ TODO:
     - _xxx -> xxx_pt renaming
     - part -> parter renaming
   - canvas module:
-    - stroke, fill and draw do no longer accept variable length argument lists but
-      an attribute list as last argument (TODO: documentation)
+    - stroke, fill, draw, set and insert do no longer accept variable length argument lists but
+      an attribute list as last argument
     - stroke and fill now support trafos (TODO: documentation)
     - uppercase version of a4, a3, ... paperformats
   - config module:
