--- a/faq/pyxfaq.tex
+++ b/faq/pyxfaq.tex
@@ -62,11 +62,11 @@ get \PyX{} to work on your system.
 
 \question{t}{Under which versions of Python will \PyX{} run?}
 {AW: this is 0.5 already, but the english might be improved}
-{\PyX{} is supposed to work with Python 2.x. However, most of the
-development takes place under current Python versions (by time of
-writing x=3). Hence its heavier tested with newer versions. On the
-other hand the examples and tests are passed with a complete set of
-Python 2.x for all available x. \PyX{} will not work with Python 1.x
+{\PyX{} is supposed to work with Python 2.0 and above. However, most of the
+development takes place under the current production version of Python (by time of
+this writing Python 2.3.3) and thus \PyX{} is better tested with this version. On the
+other hand, the examples and tests are being run with all Python
+versions 2.x. \PyX{} will not work with Python 1.x
 due to missing language features. The version of your Python
 interpreter can be determined by calling it with the option
 \texttt{-V}. Alternatively, you can simply start the interpreter and
@@ -208,7 +208,7 @@ Most of the code has been explained in \uaref{q:mingraphdata}. The main
 difference is that here you need to specify minimum and maximum for the 
 $x$-axis so that \PyX{} knows in which range to evaluate the function.
 
-See \uaref{q:zerolineattrs} for an explanation of how one can suppress the
+See \uaref{q:zeropathattrs} for an explanation of how one can suppress the
 zero lines.
 
 Another, slightly more complex, example is also provided in the \PyX{} 
@@ -310,13 +310,13 @@ Changes in the extension of axes are announced for version 0.5.
 
 \question{a}{How do I get rid of the zero line?}
 {}
-{\label{q:zerolineattrs}
-The \texttt{axispainter} takes an argument \texttt{zerolineattrs} which 
+{\label{q:zeropathattrs}
+The \texttt{axispainter} takes an argument \texttt{zeropathattrs} which 
 defaults to an empty list. Setting the \texttt{axispainter} for the
 appropriate axis to \texttt{None} will remove the zero line like in this
 example:
 \begin{progcode}
-myaxispainter = graph.axispainter(zerolineattrs=None)\\
+myaxispainter = graph.axispainter(zeropathattrs=None)\\
 \\
 g = graph.graphxy(width=10,\\
 ~~~~~~~~~~~~~~~~~~x=graph.linaxis(min=-5, max=5, painter=myaxispainter),\\
@@ -337,7 +337,7 @@ in the graph are defined by calling \texttt{g.plot} like in the following
 example in which filled circles are requested:
 \begin{progcode}
 g.plot(graph.data("test.dat"),\\
-~~~~~~~graph.symbol(graph.symbol.circle,symbolattrs=[deco.filled]\\
+~~~~~~~graph.symbol(graph.symbol.circle, symbolattrs=[deco.filled]\\
 ~~~~~~~)
 \end{progcode}
 }
