--- a/INSTALL
+++ b/INSTALL
@@ -26,28 +26,29 @@ Python distutils package.
 
 First, you have to decide which C extension modules you want to build. This can
 be done by setting the respective flags in the setup.cfg config file. By default
-no C extension modules are build and appropriate fallbacks are in place.
+no C extension modules are built and appropriate fallbacks will be used instead.
 
 The build_t1strip option enables the t1strip extension module, which provides
 partial font downloading (i.e. only the glyphs of a font that are used are
 included in the eps file). The only requisites for building this module are the
-Python headers and a C compiler.
+Python header files and a C compiler. Note that the C compiler has to suit
+the Python distribution you are using.
 
-The second extension module provides Python binding for the kpathsea library,
-which enables fast searching for files in the TeX/LaTeX directory hierarchy. You
-will need the header files of this library, which are not included in many
-standard TeX distributions. Besides that, the fallback, which uses the kpsewhich
-program, works equally well, although it is not as efficient as using the
-library directly. If you want to build the C extension module, you may also have
-to specify the location of the kpathsea header files and the library in the
-setup.cfg file.
+The second extension module pykpathsea provides Python binding for the kpathsea
+library, which enables fast searching for files in the TeX/LaTeX directory
+hierarchy. You will need the header files of this library, which are not
+included in many standard TeX distributions. Besides that, the fallback, which
+uses the kpsewhich program, works equally well, although it is not as efficient
+as using the library directly. If you want to build the C extension module, you
+may also have to specify the location of the kpathsea header files and of the
+library itself in the setup.cfg file.
 
 After you have adapted the setup.cfg file to your needs, you can either build
 PyX locally by just running
 
     python setup.py build_ext -i
 
-On the other hand, a system wide installation can be performed with help of
+or install PyX system wide by using
 
     python setup.py install
 
